Third commit. Add fonts. Make menu, blog.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,63 @@
 				</div>
 			</div>
 		</section>
+		<section class="where">
+			<div class="where__body">
+				<div class="where__contain">
+					<h2 class="where__title">Где нас найти</h2>
+					<div class="where__places-track">
+						<div class="where__place">
+							<img src="./images/location__card-img-slon.svg" alt="Говорящий слон" class="where__place-img">
+							<div class="where__place-content">
+								<p class="where__place-title">Говорящий слон</p>
+								<p class="where__place-text">Ежедневно с 19:00-05:00</p>
+								<p class="where__place-text">ул. Дзержинского, 43</p>
+							</div>
+						</div>
+						<div class="where__place">
+							<img src="./images/location__card-img-chp.svg" alt="Частная практика" class="where__place-img">
+							<div class="where__place-content">
+								<p class="where__place-title">Частная практика</p>
+								<p class="where__place-text">Ежедневно с 18:00-03:00</p>
+								<p class="where__place-text">Воскресенская ул., 6</p>
+							</div>
+						</div>
+						<div class="where__place">
+							<img src="./images/location__card-img-icebar.svg" alt="Ice bar" class="where__place-img">
+							<div class="where__place-content">
+								<p class="where__place-title">Ice bar</p>
+								<p class="where__place-text">Вс-чт 12:00-23:00<br>Пт,сб 12:00-04:00</p>
+								<p class="where__place-text">Московская ул., 10</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="blog">
+			<div class="blog__body">
+				<div class="blog__contain">
+					<h2 class="blog__title">Где Ватсон?</h2>
+					<div class="blog__content">
+						<img src="./images/where-wts__img.jpg" alt="Где Ватсон?" class="blog__img">
+						<div class="blog__text-track">
+							<p class="blog__text">-братишка, можешь отойти?) Я экрана не вижу☺📺
+								-ахах😅 а че ты делаешь?
+								-да пытаюсь в Майнкрафте угля найти для миссии с вертолетиком из ГТА Сан-Кальянос☝🏼🤓🎮
+								-че⁉Ты по человечески скажи, а то я ни*хуя не понял внатуре🤣🤦🏻 Лучше зацени какие я колечки четкие пускаю💨🤙🏼😎 Щас калюмбасиком тебя от задротства лечить будем🤣🩺</p>
+								<p class="blog__text">Малодчик, все правильно сказал👍🏼 В кальянной надо покур мутить, а не в играх зависать😹👏🏻🙈</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="menu">
+			<div class="menu__body">
+				<div class="menu__contain">
+					<h2 class="menu-title">Меню</h2>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 </html>
