Fourth commit. Make catering.

--- a/index.html
+++ b/index.html
@@ -84,9 +84,115 @@
 			<div class="menu__body">
 				<div class="menu__contain">
 					<h2 class="menu-title">Меню</h2>
+					<div class="menu__cards-track">
+						<div class="menu__card">
+							<div class="menu__card-title-contain">
+								<p class="menu__card-text"><span class="menu__card-title">Озеро</span></p>
+								<p class="menu__card-text"><span class="menu__card-price">800</span></p>
+							</div>
+							<p class="menu__card-text">Классический легкий кальян</p>
+						</div>
+						<div class="menu__card">
+							<div class="menu__card-title-contain">
+								<p class="menu__card-text"><span class="menu__card-title">Море</span></p>
+								<p class="menu__card-text"><span class="menu__card-price">1050</span></p>
+							</div>
+							<p class="menu__card-text">Фирменный кальян с необычной гаммой вкусов, лёгкой или мредней крепости, никого не оставит равнодушным</p>
+						</div>
+						<div class="menu__card">
+							<div class="menu__card-title-contain">
+								<p class="menu__card-text"><span class="menu__card-title">Океан</span></p>
+								<p class="menu__card-text"><span class="menu__card-price">1200</span></p>
+							</div>
+							<p class="menu__card-text">Кальян на премиальной смеси может быть как лёгким, так средним или крепким</p>
+						</div>
+						<div class="menu__card">
+							<div class="menu__card-title-contain">
+								<p class="menu__card-text"><span class="menu__card-title">Озеро</span></p>
+								<p class="menu__card-text"><span class="menu__card-price">800</span></p>
+							</div>
+							<p class="menu__card-text">Классический легкий кальян</p>
+						</div>
+						<div class="menu__card">
+							<div class="menu__card-title-contain">
+								<p class="menu__card-text"><span class="menu__card-title">Море</span></p>
+								<p class="menu__card-text"><span class="menu__card-price">1050</span></p>
+							</div>
+							<p class="menu__card-text">Фирменный кальян с необычной гаммой вкусов, лёгкой или мредней крепости, никого не оставит равнодушным</p>
+						</div>
+						<div class="menu__card">
+							<div class="menu__card-title-contain">
+								<p class="menu__card-text"><span class="menu__card-title">Океан</span></p>
+								<p class="menu__card-text"><span class="menu__card-price">1200</span></p>
+							</div>
+							<p class="menu__card-text">Кальян на премиальной смеси может быть как лёгким, так средним или крепким</p>
+						</div>
+						<div class="menu__card">
+							<div class="menu__card-title-contain">
+								<p class="menu__card-text"><span class="menu__card-title">Озеро</span></p>
+								<p class="menu__card-text"><span class="menu__card-price">800</span></p>
+							</div>
+							<p class="menu__card-text">Классический легкий кальян</p>
+						</div>
+						<div class="menu__card">
+							<div class="menu__card-title-contain">
+								<p class="menu__card-text"><span class="menu__card-title">Море</span></p>
+								<p class="menu__card-text"><span class="menu__card-price">1050</span></p>
+							</div>
+							<p class="menu__card-text">Фирменный кальян с необычной гаммой вкусов, лёгкой или мредней крепости, никого не оставит равнодушным</p>
+						</div>
+						<div class="menu__card">
+							<div class="menu__card-title-contain">
+								<p class="menu__card-text"><span class="menu__card-title">Океан</span></p>
+								<p class="menu__card-text"><span class="menu__card-price">1200</span></p>
+							</div>
+							<p class="menu__card-text">Кальян на премиальной смеси может быть как лёгким, так средним или крепким</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="blog">
+			<div class="blog__body">
+				<div class="blog__contain">
+					<h2 class="blog__title">Прикольчик от Ватсона</h2>
+					<div class="blog__content">
+						<img src="./images/pricol__img.png" alt="Прикольчик от Ватсона" class="blog__img">
+						<div class="blog__text-track">
+							<p class="blog__text">-братишка, можешь отойти?) Я экрана не вижу☺📺
+								-ахах😅 а че ты делаешь?
+								-да пытаюсь в Майнкрафте угля найти для миссии с вертолетиком из ГТА Сан-Кальянос☝🏼🤓🎮
+								-че⁉Ты по человечески скажи, а то я ни*хуя не понял внатуре🤣🤦🏻 Лучше зацени какие я колечки четкие пускаю💨🤙🏼😎 Щас калюмбасиком тебя от задротства лечить будем🤣🩺</p>
+								<p class="blog__text">Малодчик, все правильно сказал👍🏼 В кальянной надо покур мутить, а не в играх зависать😹👏🏻🙈</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="catering">
+			<div class="catering__body">
+				<div class="catering__contain">
+					<h2 class="catering__title">Кейтеринг</h2>
+					<div class="catering__content">
+						<div class="slider">
+							<img src="./images/keytering__img.jpg" alt="" class="slider__img">
+							<div class="slider__arrows">
+								<div class="d16"></div>
+								<div class="d15"></div>
+							</div>
+						</div>
+						<div class="catering__text-track">
+							<p class="catering__text">-братишка, можешь отойти?) Я экрана не вижу☺📺
+								-ахах😅 а че ты делаешь?
+								-да пытаюсь в Майнкрафте угля найти для миссии с вертолетиком из ГТА Сан-Кальянос☝🏼🤓🎮
+								-че⁉Ты по человечески скажи, а то я ни*хуя не понял внатуре🤣🤦🏻 Лучше зацени какие я колечки четкие пускаю💨🤙🏼😎 Щас калюмбасиком тебя от задротства лечить будем🤣🩺</p>
+								<p class="catering__text">Малодчик, все правильно сказал👍🏼 В кальянной надо покур мутить, а не в играх зависать😹👏🏻🙈</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
 	</main>
+	<script src="./script.js"></script>
 </body>
 </html>
