--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 	<header class="header">
 		<div class="header__body">
 			<img src="./images/header__logo.svg" alt="PAPA WATCON" class="header__logo">
+			<div class="header__burger">
+				<span></span>
+			</div>
 			<div class="header__links-contain">
 				<a href="#vatson" class="header__link">Ватсон</a>
 				<a href="#where" class="header__link">Где мы</a>
@@ -83,7 +86,7 @@
 		<section class="menu">
 			<div class="menu__body">
 				<div class="menu__contain">
-					<h2 class="menu-title">Меню</h2>
+					<h2 class="menu__title">Меню</h2>
 					<div class="menu__cards-track">
 						<div class="menu__card">
 							<div class="menu__card-title-contain">
@@ -155,7 +158,7 @@
 		<section class="blog">
 			<div class="blog__body">
 				<div class="blog__contain">
-					<h2 class="blog__title">Прикольчик от Ватсона</h2>
+					<h2 class="blog__title">Прикольчик <span>от Ватсона</span></h2>
 					<div class="blog__content">
 						<img src="./images/pricol__img.png" alt="Прикольчик от Ватсона" class="blog__img">
 						<div class="blog__text-track">
@@ -181,6 +184,12 @@
 									<li class="slide"><img src="./images/keytering__img.jpg" alt="" class="slide__img"></li>
 									<li class="slide"><img src="./images/keytering__img.jpg" alt="" class="slide__img"></li>
 									<li class="slide"><img src="./images/keytering__img.jpg" alt="" class="slide__img"></li>
+								</ul>
+								<ul class="slider__nav-btn" id="nav-btns">
+									<li class="slide-nav-btn"></li>
+									<li class="slide-nav-btn"></li>
+									<li class="slide-nav-btn"></li>
+									<li class="slide-nav-btn"></li>
 								</ul>
 							</div>
 							<div class="slider__arrows">
