--- a/index.html
+++ b/index.html
@@ -245,8 +245,29 @@
 				</div>
 			</div>
 		</section>
-		<section class="map">
-			
+		<section class="contacts">
+			<div class="contacts__body">
+				<div class="contacts__contain">
+					<div class="map">
+						<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A90338adca96aa0d781709d949feb7aaaf73d4f84ae7c67de240de01104e98521&amp;width=100%25&amp;height=620&amp;lang=ru_RU&amp;scroll=true"></script>
+					</div>
+					<div class="contacts__contant">
+						<h2 class="contacts__title">Контакты</h2>
+						<div class="contacts__link-contain">
+							<img src="./images/Phone.svg" alt="Номер" class="contacts__link-logo">
+							<a href="tel:79999999999" class="contacts__link">79999999999</a>
+						</div>
+						<div class="contacts__link-contain">
+							<img src="./images/Mail.svg" alt="Почта" class="contacts__link-logo">
+							<a href="mailto:vityacool@gmail.com" class="contacts__link">vityacool@gmail.com</a>
+						</div>
+						<div class="contacts__link-contain">
+							<img src="./images/Map.svg" alt="Адрес" class="contacts__link-logo">
+							<p class="contacts__link"><span>ул. Воскресенская, д. 6</span></p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 	</main>
 	<script src="./jquery-3.6.0.min.js"></script>
