Ninth commit. Make footer(desktop/mobile).

--- a/index.html
+++ b/index.html
@@ -270,6 +270,20 @@
 			</div>
 		</section>
 	</main>
+	<footer class="footer">
+		<div class="footer__body">
+			<div class="footer__links-contain">
+				<p class="footer__title">Меню:</p>
+				<a href="#" class="footer__link">Где нас найти</a>
+				<a href="#" class="footer__link">Где Ватсон</a>
+				<a href="#" class="footer__link">Меню</a>
+				<a href="#" class="footer__link">Прикольчик</a>
+				<a href="#" class="footer__link">Кейтеринг</a>
+				<a href="#" class="footer__link">Контакты</a>
+			</div>
+			<img src="./images/footer__logo.svg" alt="PAPAWATSON" class="footer__logo">
+		</div>
+	</footer>
 	<script src="./jquery-3.6.0.min.js"></script>
 	<script src="./slider.js"></script>
 	<script src="./menuMobile.js"></script>
