The tenth commit. The layout is finished.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<a href="#vatson" class="header__link">Ватсон</a>
 				<a href="#where" class="header__link">Где мы</a>
 				<a href="#catering" class="header__link">Кейтеринг</a>
-				<a id="contacts" href="#" class="header__link">Контакты</a>
+				<a href="#contacts" class="header__link">Контакты</a>
 			</div>
 		</div>
 	</header>
@@ -28,12 +28,12 @@
 			<div class="menu-mobile__body">
 				<div class="menu-mobile__content">
 					<h2 class="menu-mobile__title">Меню:</h2>
-					<p class="menu-mobile__link">Где нас найти</p>
-					<p class="menu-mobile__link">Где Ватсон</p>
-					<p class="menu-mobile__link">Меню</p>
-					<p class="menu-mobile__link">Прикольчик</p>
-					<p class="menu-mobile__link">Кейтеринг</p>
-					<p class="menu-mobile__link">Контакты</p>
+					<a href="#where" class="menu-mobile__link">Где нас найти</a>
+					<a href="#vatson" class="menu-mobile__link">Где Ватсон</a>
+					<a href="#menu" class="menu-mobile__link">Меню</a>
+					<a href="#prikol" class="menu-mobile__link">Прикольчик</a>
+					<a href="#catering" class="menu-mobile__link">Кейтеринг</a>
+					<a href="#contacts" class="menu-mobile__link">Контакты</a>
 				</div>
 			</div>
 		</section>
@@ -42,7 +42,9 @@
 				<div class="intro__contain">
 					<h1 class="intro__title">#PAPAWATSON - ваш кент по кальянам</h1>
 					<p class="intro__subtitle">Закажи доставку кальяна на свое мероприятие уже сейчас.</p>
-					<button class="intro__button">Заказать</button>
+					<a href="#form">
+						<button class="intro__button">Заказать</button>
+					</a>
 				</div>
 			</div>
 		</section>
@@ -96,7 +98,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="menu">
+		<section id="menu" class="menu">
 			<div class="menu__body">
 				<div class="menu__contain">
 					<h2 class="menu__title">Меню</h2>
@@ -122,53 +124,11 @@
 							</div>
 							<p class="menu__card-text">Кальян на премиальной смеси может быть как лёгким, так средним или крепким</p>
 						</div>
-						<div class="menu__card">
-							<div class="menu__card-title-contain">
-								<p class="menu__card-text"><span class="menu__card-title">Озеро</span></p>
-								<p class="menu__card-text"><span class="menu__card-price">800</span></p>
-							</div>
-							<p class="menu__card-text">Классический легкий кальян</p>
-						</div>
-						<div class="menu__card">
-							<div class="menu__card-title-contain">
-								<p class="menu__card-text"><span class="menu__card-title">Море</span></p>
-								<p class="menu__card-text"><span class="menu__card-price">1050</span></p>
-							</div>
-							<p class="menu__card-text">Фирменный кальян с необычной гаммой вкусов, лёгкой или мредней крепости, никого не оставит равнодушным</p>
-						</div>
-						<div class="menu__card">
-							<div class="menu__card-title-contain">
-								<p class="menu__card-text"><span class="menu__card-title">Океан</span></p>
-								<p class="menu__card-text"><span class="menu__card-price">1200</span></p>
-							</div>
-							<p class="menu__card-text">Кальян на премиальной смеси может быть как лёгким, так средним или крепким</p>
-						</div>
-						<div class="menu__card">
-							<div class="menu__card-title-contain">
-								<p class="menu__card-text"><span class="menu__card-title">Озеро</span></p>
-								<p class="menu__card-text"><span class="menu__card-price">800</span></p>
-							</div>
-							<p class="menu__card-text">Классический легкий кальян</p>
-						</div>
-						<div class="menu__card">
-							<div class="menu__card-title-contain">
-								<p class="menu__card-text"><span class="menu__card-title">Море</span></p>
-								<p class="menu__card-text"><span class="menu__card-price">1050</span></p>
-							</div>
-							<p class="menu__card-text">Фирменный кальян с необычной гаммой вкусов, лёгкой или мредней крепости, никого не оставит равнодушным</p>
-						</div>
-						<div class="menu__card">
-							<div class="menu__card-title-contain">
-								<p class="menu__card-text"><span class="menu__card-title">Океан</span></p>
-								<p class="menu__card-text"><span class="menu__card-price">1200</span></p>
-							</div>
-							<p class="menu__card-text">Кальян на премиальной смеси может быть как лёгким, так средним или крепким</p>
-						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section class="blog">
+		<section id="prikol" class="blog">
 			<div class="blog__body">
 				<div class="blog__contain">
 					<h2 class="blog__title">Прикольчик <span>от Ватсона</span></h2>
@@ -245,7 +205,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="contacts">
+		<section id="contacts" class="contacts">
 			<div class="contacts__body">
 				<div class="contacts__contain">
 					<div class="map">
@@ -274,12 +234,12 @@
 		<div class="footer__body">
 			<div class="footer__links-contain">
 				<p class="footer__title">Меню:</p>
-				<a href="#" class="footer__link">Где нас найти</a>
-				<a href="#" class="footer__link">Где Ватсон</a>
-				<a href="#" class="footer__link">Меню</a>
-				<a href="#" class="footer__link">Прикольчик</a>
-				<a href="#" class="footer__link">Кейтеринг</a>
-				<a href="#" class="footer__link">Контакты</a>
+				<a href="#where" class="footer__link">Где нас найти</a>
+				<a href="#vatson" class="footer__link">Где Ватсон</a>
+				<a href="#menu" class="footer__link">Меню</a>
+				<a href="#prikol" class="footer__link">Прикольчик</a>
+				<a href="#catering" class="footer__link">Кейтеринг</a>
+				<a href="#contacts" class="footer__link">Контакты</a>
 			</div>
 			<img src="./images/footer__logo.svg" alt="PAPAWATSON" class="footer__logo">
 		</div>
